--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22332,16 +22332,8 @@ video {
   vertical-align: text-bottom;
 }
 
-.font-sans{
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
-
-.font-serif{
-  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-}
-
-.font-mono{
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+.font-body{
+  font-family: Avenir, Helvetica Neue, Helvetica, Arial, "Hiragino Sans", ヒラギノ角ゴシック, メイリオ, Meiryo, YuGothic, Yu Gothic, ＭＳ Ｐゴシック, MS PGothic, sans-serif;
 }
 
 .text-xs{
@@ -53571,16 +53563,8 @@ video {
     vertical-align: text-bottom;
   }
 
-  .sm\:font-sans{
-    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  }
-
-  .sm\:font-serif{
-    font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-  }
-
-  .sm\:font-mono{
-    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  .sm\:font-body{
+    font-family: Avenir, Helvetica Neue, Helvetica, Arial, "Hiragino Sans", ヒラギノ角ゴシック, メイリオ, Meiryo, YuGothic, Yu Gothic, ＭＳ Ｐゴシック, MS PGothic, sans-serif;
   }
 
   .sm\:text-xs{
@@ -84798,16 +84782,8 @@ video {
     vertical-align: text-bottom;
   }
 
-  .md\:font-sans{
-    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  }
-
-  .md\:font-serif{
-    font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-  }
-
-  .md\:font-mono{
-    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  .md\:font-body{
+    font-family: Avenir, Helvetica Neue, Helvetica, Arial, "Hiragino Sans", ヒラギノ角ゴシック, メイリオ, Meiryo, YuGothic, Yu Gothic, ＭＳ Ｐゴシック, MS PGothic, sans-serif;
   }
 
   .md\:text-xs{
@@ -116025,16 +116001,8 @@ video {
     vertical-align: text-bottom;
   }
 
-  .lg\:font-sans{
-    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  }
-
-  .lg\:font-serif{
-    font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-  }
-
-  .lg\:font-mono{
-    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  .lg\:font-body{
+    font-family: Avenir, Helvetica Neue, Helvetica, Arial, "Hiragino Sans", ヒラギノ角ゴシック, メイリオ, Meiryo, YuGothic, Yu Gothic, ＭＳ Ｐゴシック, MS PGothic, sans-serif;
   }
 
   .lg\:text-xs{
@@ -147252,16 +147220,8 @@ video {
     vertical-align: text-bottom;
   }
 
-  .xl\:font-sans{
-    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  }
-
-  .xl\:font-serif{
-    font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-  }
-
-  .xl\:font-mono{
-    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  .xl\:font-body{
+    font-family: Avenir, Helvetica Neue, Helvetica, Arial, "Hiragino Sans", ヒラギノ角ゴシック, メイリオ, Meiryo, YuGothic, Yu Gothic, ＭＳ Ｐゴシック, MS PGothic, sans-serif;
   }
 
   .xl\:text-xs{
@@ -178479,16 +178439,8 @@ video {
     vertical-align: text-bottom;
   }
 
-  .\32xl\:font-sans{
-    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  }
-
-  .\32xl\:font-serif{
-    font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-  }
-
-  .\32xl\:font-mono{
-    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  .\32xl\:font-body{
+    font-family: Avenir, Helvetica Neue, Helvetica, Arial, "Hiragino Sans", ヒラギノ角ゴシック, メイリオ, Meiryo, YuGothic, Yu Gothic, ＭＳ Ｐゴシック, MS PGothic, sans-serif;
   }
 
   .\32xl\:text-xs{
